Taking care of "Add to Notebook" section.

--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "00e32df7",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "77f1f10b",
    "metadata": {},
@@ -19,7 +17,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8e386bfa",
    "metadata": {},
@@ -28,7 +25,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "97872ca4",
    "metadata": {},
@@ -68,7 +64,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "21392eaf",
    "metadata": {},
@@ -115,7 +110,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0e2460de",
    "metadata": {},
@@ -164,7 +158,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3aea2216",
    "metadata": {},
@@ -213,7 +206,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "51a9a10a",
    "metadata": {},
@@ -266,7 +258,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6ca518fe",
    "metadata": {},
@@ -302,7 +293,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "705fbe1f",
    "metadata": {},
@@ -311,7 +301,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0d7d9cce",
    "metadata": {},
@@ -338,7 +327,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b0de2647",
    "metadata": {},
@@ -347,7 +335,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d078dd30",
    "metadata": {},
@@ -385,7 +372,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d5df5526",
    "metadata": {},
@@ -394,7 +380,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "fac92f51",
    "metadata": {},
@@ -432,7 +417,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0d3c1204",
    "metadata": {},
@@ -471,7 +455,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "07e918e9",
    "metadata": {},
@@ -518,7 +501,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ce39ebbd",
    "metadata": {},
@@ -558,7 +540,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ca8c0e59",
    "metadata": {},
@@ -627,7 +608,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5752b493",
    "metadata": {},
@@ -649,7 +629,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7ae84afd",
    "metadata": {},
@@ -658,7 +637,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bae520d8",
    "metadata": {},
@@ -696,7 +674,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3238c596",
    "metadata": {},
@@ -733,7 +710,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a7a3eeda",
    "metadata": {},
@@ -768,7 +744,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ca8a543c",
    "metadata": {},
@@ -777,7 +752,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7e8b9cd3",
    "metadata": {},
@@ -812,14 +786,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "576f63bf",
    "metadata": {},
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "fefc9f77",
    "metadata": {},
@@ -828,7 +800,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "777846f8",
    "metadata": {},
@@ -868,7 +839,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d8382abe",
    "metadata": {},
@@ -897,7 +867,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "97eb8a9e",
    "metadata": {},
@@ -926,7 +895,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "263ba2e3",
    "metadata": {},
@@ -950,7 +918,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "80f60dcb",
    "metadata": {},
@@ -1010,7 +977,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7f00a91b",
    "metadata": {},
@@ -1054,7 +1020,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8e372be9",
    "metadata": {},
@@ -1084,7 +1049,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "07d813b0",
    "metadata": {},
@@ -1115,7 +1079,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e60ccdc1",
    "metadata": {},
@@ -1154,7 +1117,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0248e2b9",
    "metadata": {},
@@ -1163,7 +1125,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2f708732",
    "metadata": {},
@@ -1193,7 +1154,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8b3e11d9",
    "metadata": {},
@@ -1214,7 +1174,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5665dc56",
    "metadata": {},
@@ -1223,7 +1182,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "89c4e87e",
    "metadata": {},
@@ -1261,7 +1219,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c87569bd",
    "metadata": {},
@@ -1284,7 +1241,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8d132a3d",
    "metadata": {},
@@ -1352,7 +1308,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6ec5eb40",
    "metadata": {},
@@ -1361,7 +1316,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "21878be0",
    "metadata": {},
@@ -1445,7 +1399,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ef249ea8",
    "metadata": {},
@@ -1476,7 +1429,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d1027b37",
    "metadata": {},
@@ -1509,7 +1461,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "62d09a7d",
    "metadata": {},
@@ -1539,7 +1490,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8bc4de38",
    "metadata": {},
@@ -1578,7 +1528,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9da284c3",
    "metadata": {},
@@ -1612,7 +1561,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4f18887e",
    "metadata": {},
@@ -1649,7 +1597,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "97a2c168",
    "metadata": {},
@@ -1691,7 +1638,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5f00b65c",
    "metadata": {},
@@ -1753,9 +1699,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0503dde4",
+   "metadata": {},
+   "source": [
+    "# Default Mutable Arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7faea99f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10]\n",
+      "[10, 10]\n",
+      "[10]\n",
+      "[10, 10, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f():\n",
+    "    return 10\n",
+    "\n",
+    "def g(a=f(), b=[]):\n",
+    "    b.append(a)\n",
+    "    a += 1  # no effect because not a mutable reference type\n",
+    "    \n",
+    "    return [*b]\n",
+    "\n",
+    "print(g())\n",
+    "print(g())\n",
+    "print(g(b=[])) # temporary break from the cached one\n",
+    "print(g())     # right back into it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2040a3c",
+   "metadata": {},
+   "source": [
+    "# Missing Return\n",
+    "\n",
+    "When a function doesn't return, it implicitly returns `None`, like in Perl.\n",
+    "\n",
+    "It does not have a special void type like in C-like languages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6314d510",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f():\n",
+    "    pass\n",
+    "\n",
+    "x = f()\n",
+    "print(x)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b1339b4",
+   "id": "fd2177c2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1777,7 +1798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
