--- a/python/Collections Tips.ipynb
+++ b/python/Collections Tips.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "be752a76",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2fb45a0f",
    "metadata": {},
@@ -43,7 +41,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ec4c261f",
    "metadata": {},
@@ -85,7 +82,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f6cdf310",
    "metadata": {},
@@ -115,7 +111,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "12b14cdc",
    "metadata": {},
@@ -179,7 +174,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "616996e5",
    "metadata": {},
@@ -225,7 +219,46 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ab37431a",
+   "metadata": {},
+   "source": [
+    "# Assigning Slices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8b550cad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[2, 3, 5]\n",
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# these are independent copies of the same original data\n",
+    "l1 = [1, 2, 3]\n",
+    "l2 = l1[1:]\n",
+    "l1.append(4)\n",
+    "l2.append(5)\n",
+    "\n",
+    "print(l1)\n",
+    "print(l2)\n",
+    "\n",
+    "# this destructively changes the original\n",
+    "l1 = [1, 2, 3]\n",
+    "l1[1:] = []\n",
+    "print(l1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "afa5d7ef",
    "metadata": {},
@@ -258,7 +291,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f4f7f36b",
    "metadata": {},
@@ -288,7 +320,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ce6a4de5",
    "metadata": {},
@@ -326,7 +357,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8e59364f",
    "metadata": {},
@@ -382,7 +412,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "856df543",
    "metadata": {},
@@ -457,9 +486,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "954762c3",
+   "metadata": {},
+   "source": [
+    "# Shallow Copy\n",
+    "\n",
+    "This shows 2 ways to copy a list (which can be extrapolated to other data types as needed):\n",
+    "1. via star operator\n",
+    "1. via copy constructor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "918d1560",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [1, 2, 3]\n",
+    "l2 = [*l1]\n",
+    "l3 = list(l1)\n",
+    "\n",
+    "l1.append(4)\n",
+    "print(l2)\n",
+    "print(l3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "953ca6a7",
+   "metadata": {},
+   "source": [
+    "# Conversions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fe0b9038",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3}\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 2, 3, 1]\n",
+    "s = set(l)\n",
+    "print(s)\n",
+    "l2 = list(s)\n",
+    "print(l2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8afb89fd",
+   "id": "b26e9b89",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -481,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
