--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -157,7 +157,9 @@
    "id": "c5eeb3cd",
    "metadata": {},
    "source": [
-    "# Data Types\n"
+    "# Data Types\n",
+    "\n",
+    "NOTE: `int` is variably sized so that it can become arbitrarily huge if needed, but `float` is 64-bit minus whatever overhead Python takes.  There is also some pooling/interning done for ints."
    ]
   },
   {
@@ -516,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "id": "1f85fbee",
    "metadata": {},
    "outputs": [
@@ -545,6 +547,7 @@
     "    print(x)\n",
     "\n",
     "t = (1, 2, 3)\n",
+    "t = 1, 2, 3  # same thing\n",
     "print(t[0])  # indexable like list (but immutable)\n",
     "\n",
     "# Tuple unpacking syntax works on lists too, and vice versa\n",
@@ -556,7 +559,10 @@
     "print(x, y, z)\n",
     "l = (1, 2, 3)\n",
     "[x, y, z] = l\n",
-    "print(x, y, z)"
+    "print(x, y, z)\n",
+    "\n",
+    "# empty tuple\n",
+    "et = ()"
    ]
   },
   {
@@ -1083,7 +1089,7 @@
    "source": [
     "# Diamond Inheritance\n",
     "\n",
-    "Rather than a singleton of A shared by B and C, like in C++, we just get B's version because it comes first in D's inheritance list. This is known as **MRO** (method resolution order).\n"
+    "Rather than a singleton of A shared by B and C, we just get B's version because it comes first in D's inheritance list. This is known as **MRO** (method resolution order)."
    ]
   },
   {
@@ -1125,6 +1131,18 @@
     "\n",
     "d = D()\n",
     "d.common_method()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14381891",
+   "metadata": {},
+   "source": [
+    "# Generics\n",
+    "\n",
+    "Python __does not have__ generics because it is duck-typed at runtime.\n",
+    "\n",
+    "It does, however, have simulated generics in the type hints (see __Type Hints__ notebook)."
    ]
   },
   {
@@ -1618,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "73b26ec4",
    "metadata": {},
    "outputs": [],
@@ -1683,6 +1701,76 @@
     "contains = \"World\" in s\n",
     "index = s.index(\"World\")\n",
     "count = s.count(\"o\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b5eb089",
+   "metadata": {},
+   "source": [
+    "# Strings Are Immutable\n",
+    "\n",
+    "Mutation methods of string return copies.\n",
+    "\n",
+    "You can convert it to a list and back if you need list mutation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a379ab09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "llo, world\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'hello, world'\n",
+    "# s[0] = 't' # ILLEGAL\n",
+    "# s[:2] = [] # ILLEGAL\n",
+    "\n",
+    "# mutable copy by making it into a list of chars\n",
+    "c = list(s)\n",
+    "c[0] = 't'\n",
+    "c[:2] = []\n",
+    "\n",
+    "print(''.join(c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "961973ef",
+   "metadata": {},
+   "source": [
+    "# Characters\n",
+    "\n",
+    "There is no character data type.  A character is a string of length 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a10650bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['h', 'i', ',', ' ', 't', 'h', 'e', 'r', 'e']\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'hi, there'\n",
+    "print(list(s))\n",
+    "print(type(list(s)[0]))"
    ]
   },
   {
@@ -1803,12 +1891,16 @@
    "id": "e05ffba0",
    "metadata": {},
    "source": [
-    "# Map and Reduce\n"
+    "# Map, Reduce, Filter\n",
+    "\n",
+    "`map()` and `filter()` are both top-level functions that return lazy sequences.\n",
+    "\n",
+    "`reduce()` must be imported and returns a single value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 10,
    "id": "9e3ce868",
    "metadata": {},
    "outputs": [
@@ -1817,7 +1909,8 @@
      "output_type": "stream",
      "text": [
       "[1, 4, 9]\n",
-      "6\n"
+      "6\n",
+      "[2]\n"
      ]
     }
    ],
@@ -1829,7 +1922,10 @@
     "from functools import reduce\n",
     "\n",
     "r = reduce(lambda a, b: a + b, l, 0)\n",
-    "print(r)"
+    "print(r)\n",
+    "\n",
+    "f = filter(lambda x: x % 2 == 0, l)\n",
+    "print(list(f))"
    ]
   },
   {
@@ -2299,9 +2395,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ae6c39b",
+   "metadata": {},
+   "source": [
+    "# Static Variables\n",
+    "\n",
+    "Local static variables __do not exist__ in Python, but there are ways to get the same effect.\n",
+    "\n",
+    "The code below shows storing an attribute on the function.\n",
+    "\n",
+    "Other ways to do it:\n",
+    "- default mutable args\n",
+    "- closures\n",
+    "- global variables\n",
+    "- class statics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "aea88543",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f():\n",
+    "    if not hasattr(f, 'count'):\n",
+    "        f.count = 0\n",
+    "    else:\n",
+    "        f.count += 1\n",
+    "    return f.count\n",
+    "\n",
+    "print(f())\n",
+    "print(f())\n",
+    "print(f())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c88defa",
+   "id": "f47eedcf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2323,7 +2466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
