--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bc7c94ed",
    "metadata": {},
@@ -10,7 +9,11 @@
     "\n",
     "The built-in python stuff like str() and len() will look for certain members on a class.\n",
     "\n",
-    "Since Python is **duck-typed**, there are no interfaces - just implement the members you need.\n"
+    "Since Python is **duck-typed**, there are no interfaces - just implement the members you need.\n",
+    "\n",
+    "NOTE: a lot of these methods have top-level functions without underscores you can call to invoke them conveniently\n",
+    " - eg. instead of m.__hash__(), you can call hash(m)\n",
+    " - eg. hash(), str(), len(), iter(), etc."
    ]
   },
   {
@@ -107,7 +110,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "29eaea53",
    "metadata": {},
@@ -249,7 +251,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b142fc19",
    "metadata": {},
@@ -324,7 +325,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "de0f1f67",
    "metadata": {},
@@ -437,7 +437,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3c55fe1c",
    "metadata": {},
@@ -496,7 +495,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f8d2faa9",
    "metadata": {},
@@ -552,7 +550,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0baf8972",
    "metadata": {},
@@ -641,7 +638,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3b5c4789",
    "metadata": {},
@@ -698,7 +694,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "97ac38b6",
    "metadata": {},
@@ -748,9 +743,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6f97128e",
+   "metadata": {},
+   "source": [
+    "# object\n",
+    "\n",
+    "The implicit root of all classes in Python is `object`.  This even applies to __primitives__.\n",
+    "\n",
+    "This gives you certain behavior like a hash function that's different for each instance so that you can use your class as dictionary keys right off the bat."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3ff1da8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "277953588\n",
+      "277953591\n",
+      "276298648\n",
+      "278129751\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass:\n",
+    "    pass\n",
+    "\n",
+    "print(isinstance(MyClass, object))\n",
+    "print(isinstance(5, object))\n",
+    "\n",
+    "m = MyClass()\n",
+    "n = MyClass()\n",
+    "\n",
+    "print(m.__hash__())\n",
+    "print(n.__hash__())\n",
+    "\n",
+    "o1 = object()\n",
+    "o2 = object()\n",
+    "\n",
+    "print(o1.__hash__())\n",
+    "print(o2.__hash__())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "052e54a9",
+   "id": "2e9d815e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -772,7 +818,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
