Syncing 'Variables' with Java cheat sheet.

--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -318,6 +318,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "be7dfade",
+   "metadata": {},
+   "source": [
+    "# Default Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d2a895f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0.0\n",
+      "\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int())\n",
+    "print(float())\n",
+    "print(str())\n",
+    "print(bool())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fc93a619",
    "metadata": {},
    "source": [
@@ -1135,7 +1167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14381891",
+   "id": "38241b36",
    "metadata": {},
    "source": [
     "# Generics\n",
@@ -1705,7 +1737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b5eb089",
+   "id": "51d90de6",
    "metadata": {},
    "source": [
     "# Strings Are Immutable\n",
@@ -1718,7 +1750,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a379ab09",
+   "id": "0051b232",
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "961973ef",
+   "id": "30182e1a",
    "metadata": {},
    "source": [
     "# Characters\n",
@@ -1755,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a10650bf",
+   "id": "0334dbb2",
    "metadata": {},
    "outputs": [
     {
@@ -2396,7 +2428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ae6c39b",
+   "id": "9761060c",
    "metadata": {},
    "source": [
     "# Static Variables\n",
@@ -2415,7 +2447,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aea88543",
+   "id": "ed7b0100",
    "metadata": {},
    "outputs": [
     {
@@ -2442,9 +2474,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "63b29ba6",
+   "metadata": {},
+   "source": [
+    "# Enum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ed2d3bf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Color.RED\n",
+      "Color.RED\n",
+      "Color.RED\n",
+      "Color2.RED\n",
+      "\n",
+      "RED 1\n",
+      "GREEN 2\n",
+      "BLUE 3\n",
+      "\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "\n",
+      "1\n",
+      "\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from enum import Enum, auto\n",
+    "\n",
+    "# class syntax\n",
+    "class Color(Enum):\n",
+    "    RED = 1\n",
+    "    GREEN = 2\n",
+    "    BLUE = 3\n",
+    "    \n",
+    "# functional syntax\n",
+    "Color2 = Enum('Color2', ['RED', 'GREEN', 'BLUE'])\n",
+    "\n",
+    "# retrieving\n",
+    "color = Color.RED\n",
+    "print(color)\n",
+    "color = Color(1)\n",
+    "print(color)\n",
+    "color = Color['RED']\n",
+    "print(color)\n",
+    "color = Color2['RED']\n",
+    "print(color)\n",
+    "print()\n",
+    "\n",
+    "# enumerating and members\n",
+    "for color in Color:\n",
+    "    print(color.name, color.value)\n",
+    "print()\n",
+    "\n",
+    "# uniqueness\n",
+    "print(Color(1) is Color(1))\n",
+    "print(Color(1) == Color(1))\n",
+    "print(Color['RED'] == Color(1))\n",
+    "print(Color['RED'] is Color(1))\n",
+    "print()\n",
+    "\n",
+    "# auto-assignment\n",
+    "class Color3(Enum):\n",
+    "    RED = auto()\n",
+    "    GREEN = auto()\n",
+    "    BLUE = auto()\n",
+    "print(Color3.RED.value)\n",
+    "print()\n",
+    "\n",
+    "# custom enums\n",
+    "class Color4(Enum):\n",
+    "    RED = auto()\n",
+    "    GREEN = auto()\n",
+    "    BLUE = auto()\n",
+    "    \n",
+    "    def is_cool(self):\n",
+    "        return self is Color4.BLUE or self is Color4.GREEN\n",
+    "print(Color4.BLUE.is_cool())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f47eedcf",
+   "id": "d89f385b",
    "metadata": {},
    "outputs": [],
    "source": []
