Syncing Java collections up to before Map.

--- a/python/Collections Tips.ipynb
+++ b/python/Collections Tips.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab37431a",
+   "id": "99aeaeb0",
    "metadata": {},
    "source": [
     "# Assigning Slices"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8b550cad",
+   "id": "c600b6af",
    "metadata": {},
    "outputs": [
     {
@@ -265,12 +265,16 @@
    "source": [
     "# Custom Sorting\n",
     "\n",
-    "Look for these kinds of lambda parameters in other sort, search, etc. functions, as well as built-in double underscore members you can add on classes to implement behavior.\n"
+    "Look for these kinds of lambda parameters in other sort, search, etc. functions, as well as built-in double underscore members you can add on classes to implement behavior.\n",
+    "\n",
+    "You can also reverse it.\n",
+    "\n",
+    "NOTE: you can also implement the < operator for the object being sorted by."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "e19aa788",
    "metadata": {},
    "outputs": [
@@ -278,7 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'key2': 2}, {'key3': 3}, {'key7': 7}, {'key11': 11}]\n"
+      "[{'key11': 11}, {'key7': 7}, {'key3': 3}, {'key2': 2}]\n"
      ]
     }
    ],
@@ -286,7 +290,7 @@
     "x = [7, 3, 11, 2]\n",
     "y = [{'key' + str(i): i} for i in x]\n",
     "\n",
-    "z = sorted(y, key=lambda e: list(e.values())[0])\n",
+    "z = sorted(y, key=lambda e: list(e.values())[0], reverse=True)\n",
     "print(z)"
    ]
   },
@@ -487,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "954762c3",
+   "id": "06e739fa",
    "metadata": {},
    "source": [
     "# Shallow Copy\n",
@@ -500,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "918d1560",
+   "id": "f94ca0d7",
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "953ca6a7",
+   "id": "608c2836",
    "metadata": {},
    "source": [
     "# Conversions"
@@ -533,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fe0b9038",
+   "id": "7519810e",
    "metadata": {},
    "outputs": [
     {
@@ -554,9 +558,189 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c6c6ecc",
+   "metadata": {},
+   "source": [
+    "# Binary Search\n",
+    "\n",
+    "`bisect_left` does a binary search (using `<` operator) for the leftmost occurence of the element.\n",
+    "\n",
+    "`bisect_right` does a binary search (using `<` operator) for the element just past the righmost occurence of the element (can be used as __exclusive bound__).\n",
+    "\n",
+    "In both cases, if it is not found, the index returned is the point where you'd __insert__ the element (same position for both functions). To tell whether it was found or not, use `==` on the element itself indexed by this index.\n",
+    "\n",
+    "If the element belongs at the end of the list, `len(l)` is returned.  Make sure to check this condition to avoid out of bounds errors.  Keep in mind that `bisect_right` has an ambuigity there (see special case below).\n",
+    "\n",
+    "NOTE: `bisect_left()` and `bisect_right` can also take __range__ params and a __key__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "143b4109",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "[3, 3]\n",
+      "\n",
+      "5\n",
+      "5\n",
+      "\n",
+      "6\n",
+      "6\n",
+      "\n",
+      "6\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bisect import bisect_left, bisect_right\n",
+    "\n",
+    "l = [1, 2, 3, 3, 5, 6]\n",
+    "\n",
+    "# Range of existing value\n",
+    "index1 = bisect_left(l, 3)\n",
+    "print(index1)\n",
+    "print(l[index1])\n",
+    "\n",
+    "index2 = bisect_right(l, 3)\n",
+    "print(index2)\n",
+    "print(l[index2])\n",
+    "\n",
+    "print(l[index1:index2])\n",
+    "print()\n",
+    "\n",
+    "# non-existent value\n",
+    "index3 = bisect_left(l, 4)\n",
+    "print(l[index3])\n",
+    "index4 = bisect_right(l, 4)\n",
+    "print(l[index4])\n",
+    "print()\n",
+    "\n",
+    "# off the end\n",
+    "index5 = bisect_left(l, 10)\n",
+    "print(index5)\n",
+    "index6 = bisect_right(l, 10)\n",
+    "print(index6)\n",
+    "print()\n",
+    "\n",
+    "# special case\n",
+    "index7 = bisect_right(l, 6)\n",
+    "print(index7)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8385c03d",
+   "metadata": {},
+   "source": [
+    "# all(), any()\n",
+    "\n",
+    "These check the accumulated __truthiness__ of all elements in an iterable.\n",
+    "\n",
+    "`all()` is `True` for empty iterables while `any()` is `False` for them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "eb6103ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3]\n",
+    "print(all(l))\n",
+    "l = [0, 1, 2]\n",
+    "print(all(l))\n",
+    "print(any(l))\n",
+    "\n",
+    "l = []\n",
+    "print(all(l))\n",
+    "print(any(l))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9025b0e3",
+   "metadata": {},
+   "source": [
+    "# Multiple Membership"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5ba04163",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3, 4, 5]\n",
+    "t = [1, 2]\n",
+    "\n",
+    "print(all(i in l for i in t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3e7369c",
+   "metadata": {},
+   "source": [
+    "# Linear Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "022bb2f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3, 4, 5]\n",
+    "print(l.index(2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b26e9b89",
+   "id": "f72aaa6e",
    "metadata": {},
    "outputs": [],
    "source": []
