--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -639,6 +639,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "deb10159",
+   "metadata": {},
+   "source": [
+    "# Generator Comprehension in Function Call"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9c9f6c4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(gen):\n",
+    "  for item in gen:\n",
+    "    print(item)\n",
+    "    \n",
+    "f(x**2 for x in range(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3b5c4789",
    "metadata": {},
    "source": [
@@ -744,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f97128e",
+   "id": "394552f4",
    "metadata": {},
    "source": [
     "# object\n",
@@ -757,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3ff1da8c",
+   "id": "d7dec095",
    "metadata": {},
    "outputs": [
     {
@@ -794,9 +833,179 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bb848bad",
+   "metadata": {},
+   "source": [
+    "# Object Methods Used by Collections\n",
+    "\n",
+    "The class below traces several operator calls that might happen (not all of them do) in the course of being used as an item in a collection.  It then uses the object in a few collection scenarios.\n",
+    "\n",
+    "Summary:\n",
+    "  - `<` operator (__lt__) is used for sorting and searching\n",
+    "    - the insertion point is found when `<` stops being true (might be equal or not)\n",
+    "  - `==` is used for membership tests in non-hashed collections\n",
+    "  - `hash()` and `==` are used for all retrievals in hashed collections\n",
+    "    - only `hash()` is needed for insertion though"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d18a698f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original\n",
+      "[2, 1, 4, 8, 2]\n",
+      "\n",
+      "sorted by key\n",
+      "[1, 2, 2, 4, 8]\n",
+      "\n",
+      "sorted by <\n",
+      "< operator on 1\n",
+      "< operator on 4\n",
+      "< operator on 4\n",
+      "< operator on 8\n",
+      "< operator on 8\n",
+      "< operator on 2\n",
+      "< operator on 2\n",
+      "[1, 2, 2, 4, 8]\n",
+      "\n",
+      "reverse sorted by <\n",
+      "< operator on 8\n",
+      "< operator on 4\n",
+      "< operator on 4\n",
+      "< operator on 4\n",
+      "< operator on 1\n",
+      "< operator on 1\n",
+      "< operator on 2\n",
+      "< operator on 2\n",
+      "[8, 4, 2, 2, 1]\n",
+      "\n",
+      "membership\n",
+      "== operator on 2\n",
+      "True\n",
+      "\n",
+      "sort again\n",
+      "< operator on 1\n",
+      "< operator on 4\n",
+      "< operator on 4\n",
+      "< operator on 8\n",
+      "< operator on 8\n",
+      "< operator on 2\n",
+      "< operator on 2\n",
+      "\n",
+      "binary search\n",
+      "< operator on 2\n",
+      "< operator on 2\n",
+      "< operator on 1\n",
+      "2\n",
+      "\n",
+      "equality\n",
+      "== operator on 2\n",
+      "True\n",
+      "False\n",
+      "\n",
+      "dictionary creation\n",
+      "hash on 1\n",
+      "hash on 2\n",
+      "hash on 3\n",
+      "\n",
+      "dictionary retrieval\n",
+      "hash on 1\n",
+      "== operator on 1\n",
+      "10\n",
+      "\n",
+      "dictionary membership\n",
+      "hash on 1\n",
+      "== operator on 1\n",
+      "True\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from bisect import bisect_left\n",
+    "\n",
+    "class MyClass:\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val\n",
+    "    def __lt__(self, other):\n",
+    "        print('< operator on ' + str(self.val))\n",
+    "        return self.val < other.val\n",
+    "    def __gt__(self, other):\n",
+    "        print('> operator on ' + str(self.val))\n",
+    "        return self.val > other.val\n",
+    "    def __eq__(self, other):\n",
+    "        print('== operator on ' + str(self.val))\n",
+    "        return self.val == other.val\n",
+    "    def __hash__(self):\n",
+    "        print('hash on ' + str(self.val))\n",
+    "        return hash(self.val)\n",
+    "    def __str__(self):\n",
+    "        return str(self.val)\n",
+    "    def __repr__(self):\n",
+    "        return repr(self.val)\n",
+    "    \n",
+    "print('original')\n",
+    "l = [MyClass(2), MyClass(1), MyClass(4), MyClass(8), MyClass(2)]\n",
+    "print(l)\n",
+    "print()\n",
+    "\n",
+    "print('sorted by key')\n",
+    "s = sorted(l, key=lambda m: m.val) # no operators called\n",
+    "print(s)\n",
+    "print()\n",
+    "\n",
+    "print('sorted by <')\n",
+    "s = sorted(l)\n",
+    "print(s)\n",
+    "print()\n",
+    "\n",
+    "print('reverse sorted by <')\n",
+    "s = sorted(l, reverse=True)\n",
+    "print(s)\n",
+    "print()\n",
+    "\n",
+    "print('membership')\n",
+    "print(MyClass(2) in l)\n",
+    "print()\n",
+    "\n",
+    "print('sort again')\n",
+    "s = sorted(l)\n",
+    "print()\n",
+    "\n",
+    "print('binary search')\n",
+    "index = bisect_left(s, MyClass(2))\n",
+    "print(s[index])\n",
+    "print()\n",
+    "\n",
+    "print('equality')\n",
+    "print(s[index] == MyClass(2))\n",
+    "print(s[index] is MyClass(2))\n",
+    "print()\n",
+    "\n",
+    "print('dictionary creation')\n",
+    "d = {MyClass(1): 10, MyClass(2): 20, MyClass(3): 30}\n",
+    "print()\n",
+    "\n",
+    "print('dictionary retrieval')\n",
+    "print(d[MyClass(1)])\n",
+    "print()\n",
+    "\n",
+    "print('dictionary membership')\n",
+    "print(MyClass(1) in d)\n",
+    "print()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e9d815e",
+   "id": "7773cf19",
    "metadata": {},
    "outputs": [],
    "source": []
