Adding sorted containers to Python sheet.

--- a/python/Collections Tips.ipynb
+++ b/python/Collections Tips.ipynb
@@ -738,9 +738,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f83292a7",
+   "metadata": {},
+   "source": [
+    "# Order of Items in Set and Dict\n",
+    "\n",
+    "Iterating a __dictionary__ (by keys or values) maintains the original __insertion order__.\n",
+    "Iteration a __set__ makes __no such guarantee__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6185d999",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bla', 'aa', 'caa']\n",
+      "[100, 50, 400]\n",
+      "[400, 50, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'bla': 100, 'aa': 50, 'caa': 400}\n",
+    "s = {100, 50, 400}\n",
+    "\n",
+    "print(list(d))\n",
+    "print(list(d.values()))\n",
+    "print(list(s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a014cf80",
+   "metadata": {},
+   "source": [
+    "# Reversal in Collections/Methods with No Reverse Member\n",
+    "\n",
+    "If the method/constructor takes a __key__, you can use something like this: `key = lambda x: -x` to get a reverse-sorted version."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c27f6b9",
+   "metadata": {},
+   "source": [
+    "# Priority Queue/Heap\n",
+    "\n",
+    "Heap operations (__minheap__) are done on a normal list by functions in the `heapq` built-in module.  It uses functions that take the list as the first param, but you could wrap in your own class if you wanted to.\n",
+    "\n",
+    "To make it a __maxheap__, you have to do a hack where you negate the values on insertion and negate again on pop.\n",
+    "\n",
+    "For a custom class, it uses the `<` operator like other collections do."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "edcacb83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "1\n",
+      "[2, 3]\n",
+      "2\n",
+      "[3, 4]\n",
+      "3\n",
+      "[2, 4]\n",
+      "\n",
+      "[1, 2, 3, 5]\n",
+      "\n",
+      "<\n",
+      "<\n",
+      "[1, 2, 3]\n",
+      "\n",
+      "max heap\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "# Building\n",
+    "h = []\n",
+    "heapq.heappush(h, 2) # append and fixup\n",
+    "heapq.heappush(h, 1)\n",
+    "heapq.heappush(h, 3)\n",
+    "print(h)\n",
+    "\n",
+    "# Retrieving\n",
+    "print(heapq.heappop(h)) # first item swapped to end, then fixdown, then pop() off end\n",
+    "print(h)\n",
+    "\n",
+    "# Combined Operations (more efficient)\n",
+    "print(heapq.heappushpop(h, 4)) # push then pop\n",
+    "print(h)\n",
+    "print(heapq.heapreplace(h, 2)) # pop then push\n",
+    "print(h)\n",
+    "\n",
+    "# Heap from ordinary list\n",
+    "print()\n",
+    "h = [5, 2, 3, 1]\n",
+    "heapq.heapify(h)\n",
+    "print(h)\n",
+    "\n",
+    "# Custom object\n",
+    "class MyClass:\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val\n",
+    "    def __lt__(self, other):\n",
+    "        print('<')\n",
+    "        return self.val < other.val\n",
+    "    def __eq__(self, other):\n",
+    "        print('==')\n",
+    "        return self.val == other.val\n",
+    "    def __repr__(self):\n",
+    "        return repr(self.val)\n",
+    "print()\n",
+    "h = []\n",
+    "heapq.heappush(h, MyClass(2))\n",
+    "heapq.heappush(h, MyClass(1))\n",
+    "heapq.heappush(h, MyClass(3))\n",
+    "print(h)\n",
+    "\n",
+    "# Maxheap\n",
+    "print()\n",
+    "print('max heap')\n",
+    "l = [1, 2, 3, 4, 5]\n",
+    "h = []\n",
+    "for item in l:\n",
+    "    heapq.heappush(h, -item)  # negate so that min becomes max\n",
+    "while len(h) > 0:\n",
+    "    print(-heapq.heappop(h)) # negate again to get correct value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f72aaa6e",
+   "id": "ad71dcb3",
    "metadata": {},
    "outputs": [],
    "source": []
