Syncing rest of Java 'Collections' section.

--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -1774,9 +1774,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07e6e5f8",
+   "metadata": {},
+   "source": [
+    "# No Value Types\n",
+    "\n",
+    "Unlike in other languages like Java and C++, primitive types like `int` are still reference types, but they are immutable, and assigning them technically assigns a new reference.  You don't really need to worry about that to use them, but it's a reason Python might not be as efficient as others."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd2177c2",
+   "id": "24193250",
    "metadata": {},
    "outputs": [],
    "source": []
