--- a/python/Collections Tips.ipynb
+++ b/python/Collections Tips.ipynb
@@ -887,9 +887,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc61dfea",
+   "metadata": {},
+   "source": [
+    "# StringBuilder\n",
+    "\n",
+    "There is __no such concept__ in Python.  The most efficient way to simulate it is to use `''.join()` on a list that you append incrementally (possibly with a list comprehension)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05d3c92b",
+   "metadata": {},
+   "source": [
+    "# Immutable Collections\n",
+    "\n",
+    "- The immutable equivalent of `list` is `tuple`.\n",
+    "  - it is an __independent copy__\n",
+    "- The immutable equivalent of `set` is `frozenset`.\n",
+    "  - it is an __independent copy__\n",
+    "- You can create an immutable view of a dictionary with `types.MappingProxyType`.\n",
+    "  - it is a __view on the original__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fb89a77b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5)\n",
+      "frozenset({1, 2, 3, 4, 5})\n",
+      "{'a': 1, 'b': 2, 'c': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3, 4, 5]\n",
+    "t = tuple(l)\n",
+    "l.append(6)\n",
+    "print(t)\n",
+    "\n",
+    "s = {1, 2, 3, 4, 5}\n",
+    "f = frozenset(s)\n",
+    "s.add(6)\n",
+    "print(f)\n",
+    "\n",
+    "from types import MappingProxyType\n",
+    "d = {'a': 1, 'b': 2}\n",
+    "m = MappingProxyType(d)\n",
+    "d['c'] = 3\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dd51427",
+   "metadata": {},
+   "source": [
+    "# Thread Safety\n",
+    "\n",
+    "- the main standard mutable collections `list`, `dict`, and `set` are __not thread safe__ for modification (but are for reading)\n",
+    "- `heapq` is not designed with thread safety in mind\n",
+    "- `collections.deque` is __thread safe__ for queue and stack operations but not for operations in the middle\n",
+    "- `sortedcontainers` types like `SortedList` are __not thread-safe__ for modification either\n",
+    "- to add thread safety, use __locking__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad71dcb3",
+   "id": "0e2ce65c",
    "metadata": {},
    "outputs": [],
    "source": []
