--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -2566,9 +2566,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af785943",
+   "metadata": {},
+   "source": [
+    "# Swapping\n",
+    "\n",
+    "Instead of needing a stdlib swap method, you can just use tuple packing/unpacking to swap."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fb330e39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "b = 100\n",
+    "a,b = b,a  # right side makes tuple, left side unpacks tuples back into the variables\n",
+    "\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d89f385b",
+   "id": "08901c3c",
    "metadata": {},
    "outputs": [],
    "source": []
