Syncing Java 'Strings' section to Python guide.

--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -2567,7 +2567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af785943",
+   "id": "9bfc2371",
    "metadata": {},
    "source": [
     "# Swapping\n",
@@ -2578,7 +2578,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fb330e39",
+   "id": "92e36357",
    "metadata": {},
    "outputs": [
     {
@@ -2600,9 +2600,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a790f8e",
+   "metadata": {},
+   "source": [
+    "# String Conversions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e7baf43d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "s = str(x)\n",
+    "print(s)\n",
+    "s = repr(x)\n",
+    "print(s)\n",
+    "print(x)  # same\n",
+    "\n",
+    "x = int('5')\n",
+    "print(x)\n",
+    "\n",
+    "try:\n",
+    "    x = int('5s')\n",
+    "except ValueError:\n",
+    "    pass\n",
+    "\n",
+    "print('5s'.isnumeric())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1e5701f",
+   "metadata": {},
+   "source": [
+    "# String Encoding\n",
+    "\n",
+    "  - python strings (in python 3) are unicode (utf-8)\n",
+    "  - to convert a string to bytes, use `s.encode('utf-8')`\n",
+    "  - to go the other way, `b.decode('utf-8')`\n",
+    "  - previous versions of python had a lot of complications about unicode but not anymore"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dc98cd4",
+   "metadata": {},
+   "source": [
+    "# Line Endings\n",
+    "\n",
+    "  - the different system ones all becomes \\n on read\n",
+    "  - \\n becomes proper system one on write\n",
+    "  - there are params to customize it in open(), read(), write(), etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b5826bf",
+   "metadata": {},
+   "source": [
+    "# Case Insensitivity\n",
+    "\n",
+    "- string methods not available to do it for you\n",
+    "- common ways include __converting to common case__ or using `re.IGNORECASE` with regexes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08901c3c",
+   "id": "fb02952d",
    "metadata": {},
    "outputs": [],
    "source": []
