--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -2681,9 +2681,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "93341133",
+   "metadata": {},
+   "source": [
+    "# Asserts\n",
+    "\n",
+    "Assertions don't run when you use the `-O` flag to run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "485ab7d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "bla",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m x \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m5\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m x \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m4\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbla\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: bla"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "assert x == 5\n",
+    "assert x == 4, 'bla'  # raises AssertionError in non-optimized code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4db72ac",
+   "metadata": {},
+   "source": [
+    "# Exceptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "824ce8b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('summary', 'details')\n",
+      "('summary', 'details')\n",
+      "('summary', 'details')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/var/folders/wn/pmx5pn155tg83bskqqc2wzz00000gn/T/ipykernel_16182/607626792.py\", line 4, in <module>\n",
+      "    raise Exception('summary', 'details')\n",
+      "Exception: ('summary', 'details')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import traceback\n",
+    "\n",
+    "try:\n",
+    "    raise Exception('summary', 'details')\n",
+    "except Exception as e:\n",
+    "    print(str(e))\n",
+    "    print(e)\n",
+    "    print(e.args)\n",
+    "    traceback.print_exc() # print callstack info to stderr"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb02952d",
+   "id": "bde311a6",
    "metadata": {},
    "outputs": [],
    "source": []
